# RL-task-automated-profiler-finetuning

./: AUDIT_SUMMARY.md  README.md  pyproject.toml
tasks/docs/: RESULTS.md  TECHNICAL_OVERVIEW.md
tasks/experiment_profiler/: README.md  prompt.md  run_experiment.py
tasks/experiment_profiler/artifacts/: requests.jsonl  responses.jsonl  summary.json
tasks/experiment_profiler/configs/: sample_experiment.yaml
tasks/experiment_profiler/data/: mock_responses.json
tasks/experiment_profiler/grader/: __init__.py
tasks/experiment_profiler/reference_submission/experiment_profiler/: __init__.py  cli.py  runner.py
tasks/experiment_profiler/starter/experiment_profiler/: __init__.py  cli.py  config.py  simulation.py  storage.py
tasks/experiment_profiler/tools/: __init__.py  metrics.py
